<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite40"
    android:paddingLeft="@dimen/padding_item_history"
    android:paddingRight="@dimen/padding_item_history"
    android:paddingBottom="@dimen/padding_item_history"
    android:paddingTop="@dimen/padding_item_history">

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23/10/2017 15:30:32"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true" />

    <!-- Temperatura -->

    <ImageView
        android:id="@+id/img_temperature"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/subtitle_height"
        android:src="@drawable/img_temperature"
        android:layout_below="@+id/txt_time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_temperature"
        android:text="@string/history_temperature"
        android:textColor="@color/colorWhite"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/img_temperature"
        android:layout_toEndOf="@+id/img_temperature"
        android:layout_marginTop="@dimen/space_between_text_history"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_temperature_value"
        android:textColor="@color/colorWhite"
        android:layout_alignTop="@id/txt_temperature"
        android:layout_toEndOf="@+id/txt_temperature"
        android:layout_marginBottom="@dimen/space_between_text_history_row"/>

    <!-- Humo -->

    <ImageView
        android:id="@+id/img_smoke"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/subtitle_height"
        android:src="@drawable/img_smoke"
        android:layout_below="@+id/txt_temperature_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_smoke"
        android:text="@string/history_smoke"
        android:textColor="@color/colorWhite"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/img_smoke"
        android:layout_toEndOf="@+id/img_smoke"
        android:layout_marginTop="@dimen/space_between_text_history"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_smoke_value"
        android:textColor="@color/colorWhite"
        android:layout_alignTop="@id/txt_smoke"
        android:layout_toEndOf="@+id/txt_smoke"
        android:layout_marginBottom="@dimen/space_between_text_history_row"/>

    <!-- Flama -->

    <ImageView
        android:id="@+id/img_flame"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/subtitle_height"
        android:src="@drawable/img_flame"
        android:layout_below="@+id/txt_smoke_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_flame"
        android:text="@string/history_flame"
        android:textColor="@color/colorWhite"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/img_flame"
        android:layout_toEndOf="@+id/img_flame"
        android:layout_marginTop="@dimen/space_between_text_history"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_flame_value"
        android:textColor="@color/colorWhite"
        android:layout_alignTop="@id/txt_flame"
        android:layout_toEndOf="@+id/txt_flame"
        android:layout_marginBottom="@dimen/space_between_text_history_row"/>

    <!-- Comida -->

    <ImageView
        android:id="@+id/img_food"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/subtitle_height"
        android:src="@drawable/img_food"
        android:layout_below="@+id/txt_flame_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_food"
        android:text="@string/history_food"
        android:textColor="@color/colorWhite"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/img_food"
        android:layout_toEndOf="@+id/img_food"
        android:layout_marginTop="@dimen/space_between_text_history"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_food_value"
        android:textColor="@color/colorWhite"
        android:layout_alignTop="@id/txt_food"
        android:layout_toEndOf="@+id/txt_food"
        android:layout_marginBottom="@dimen/space_between_text_history_row"/>

    <!-- Agua -->

    <ImageView
        android:id="@+id/img_water"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/subtitle_height"
        android:src="@drawable/img_water"
        android:layout_below="@+id/txt_food_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_water"
        android:text="@string/history_water"
        android:textColor="@color/colorWhite"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/img_water"
        android:layout_toEndOf="@+id/img_water"
        android:layout_marginTop="@dimen/space_between_text_history"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_water_value"
        android:textColor="@color/colorWhite"
        android:layout_alignTop="@id/txt_water"
        android:layout_toEndOf="@+id/txt_water" />
</RelativeLayout>